Bug fixes: -the text in the hidden container on /projects would sometimes flow behind icon. -Timeline is now a flexbox, with centered text

--- a/src/components/HiddenBlock/hiddenblock.module.css
+++ b/src/components/HiddenBlock/hiddenblock.module.css
@@ -27,7 +27,7 @@
     outline-color: rgb(23, 51, 112);
 }
 .hidden_content {
-    width: 90%;
+    width: 85%;
     height: 100%;
     margin-left: auto;
     margin-right: 10px;
