--- a/src/components/timeline/timeline.module.css
+++ b/src/components/timeline/timeline.module.css
@@ -5,12 +5,18 @@ div > p {
     height: 100%;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 .timeline_item {
     color: white;
     scroll-snap-align: start;
-    height: 33%;
     text-align: center;
     vertical-align: middle;
     margin: auto;
+    padding: 10%;
+    border-radius: 100%;
+    background-color: deepskyblue;
 }
